<resources>
    <string name="facebook_app_id">565509136962999</string>
    <string name="server_client_id">490184747829-tcil6aiue58q97k156oakaqju26vm25h.apps.googleusercontent.com</string>

    <string name="app_name">Spred</string>
    <string name="sigin">J\'ai déjà un compte</string>
    <string name="sigup">Je souhaite créer un compte</string>
    <string name="without">Continuer sans être authentifié*</string>
    <string name="help">*Une personne non authentifiée possède des fonctionnalités réduites</string>
    <string name="signup_step1_email">Entrez votre adresse email</string>
    <string name="signup_step1_prenom">Entrez votre prénom</string>
    <string name="signup_step1_password">Entrez votre mot de passe</string>
    <string name="signup_step1_submit">Inscription</string>
    <string name="signup_step2_submit">Valider</string>
    <string name="signup_step2_confirm_password">Confirmer votre mot de passe</string>
    <string name="signup_step2_auto_connect">Connexion automatique</string>
    <string name="signup_step3_pseudo">Votre pseudo</string>
    <string name="signup_step1_nom">Entrez votre nom</string>
    <string name="signup_step1_error_email">error</string>
    <string name="empty_input">Veuillez remplir ce champs</string>
    <string name="invalid_email">Email invalide</string>
    <string name="signup_step3_submit">Valider</string>
    <string name="signup_step2_confirm_password_error">Le mot de passe ne correspond pas</string>
    <string name="signin_email">Votre adresse email</string>
    <string name="signin_password">Votre mot de passe</string>
    <string name="signin_submit">Connexion</string>
    <string name="email_address_already_use">Adresse email déjà utilisé</string>
    <string name="wrong_length_password">Entre 4-20 caractères</string>
    <string name="pseudo_already_use">Ce pseudo est déjà utilisé</string>
    <string name="wrong_email_or_password">Adresse email ou mot de passe incorrect</string>
    <string name="signin_step2_pseudo">Votre pseudo</string>
    <string name="signin_step2_submit">Valider</string>
    <string name="email_address_already_use_by_spred">Votre adresse mail est déjà utilisé par un compte Spred</string>
    <string name="profile_edit_lastname">Votre nom</string>
    <string name="profile_edit_firstname">Votre prénom</string>
    <string name="profile_edit_email">Votre email</string>
    <string name="profile_edit_submit">Enregistrer</string>
    <string name="pathProfile_external_api_login">Impossible de modifier l\'adresse email avec une connexion externe (google, facebook, ...)</string>
    <string name="profile_edit_title">Modification de votre profil</string>
    <string name="profile_title">Votre profil</string>
    <string name="inbox_create_conversation_submit">Envoyer</string>
    <string name="inbox_create_conversation_empty_receiver">Veuillez ajouter des destinataires</string>
    <string name="inbox_create_conversation_empty_subject">Veuillez saisir un objet</string>
    <string name="inbox_create_conversation_empty_message">Veuillez saisir votre message</string>
    <string name="spredcast_name">Nom du spredCast</string>
    <string name="spredcast_description">Description</string>
    <string name="spredcast_nameError">Veuillez saisir un nom</string>
    <string name="spredcast_descriptionError">Veuillez saisir une description</string>
    <string name="spredcast_membersError">Veuillez ajouter des membres</string>
    <string name="spredcast_dateError">Veuillez sasir une date valide</string>
    <string name="spredcast_timeError">Veuillez saisir une heure valide</string>
    <string name="search_title">rechercher</string>
    <string name="invalid_grant">Adresse email ou mot de passe incorrect</string>
</resources>
